...
        let action = UIAlertAction(title: modelAlert.buttonText, style: .default) { _ in
            //ативируем completion hendler
            modelAlert.completion()}
        
        //добавляем кнопку к алерту
        alert.addAction(action)
        alert.view.accessibilityIdentifier = "Game result"
        
        //разрешаем показ алерта
        self.present(alert, animated: true, completion: nil)
    }
    
    // метод паказа олерта с результатами статистики
...
